--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,16 +30,14 @@ environment:
 dependencies:
   cached_network_image: ^3.2.3
   cupertino_icons: ^1.0.2
+  faker: ^2.1.0
   flutter:
     sdk: flutter
   google_fonts: ^4.0.3
+  jiffy: ^5.0.0
+  meta: ^1.8.0
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
